@@ -9,6 +9,9 @@ Release 0.11.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-1394: Support reconnect on tsql. 
+    (Contributed by navis, Committed by hyunsik)
+
     TAJO-527: Upgrade to Netty 4. (jihun)
 
     TAJO-1369: Some stack trace information is missed in error/fail logging. 
